fixed sonarqube issues